--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.0.0-alpha.8",
-    "mongoose": "^5.11.19"
+    "mongoose": "^5.11.19",
+    "multer": "^1.4.2"
   }
 }
