--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^5.0.0-alpha.8",
+    "http-assert": "^1.4.1",
     "inflection": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.19",
