--- a/fyj-wzry/package.json
+++ b/fyj-wzry/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass-loader": "^9.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -25,6 +26,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.8",
     "vue-template-compiler": "^2.6.11"
   }
 }
