--- a/fyj-wzry/package.json
+++ b/fyj-wzry/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "sass-loader": "^9.0.0",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -27,7 +29,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.8",
-    "vue-awesome-swiper": "^3.1.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
